Fix main logo positioning on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -173,7 +173,7 @@ nav {
 
             @media #{$screen-mobile} {
                 display: inherit;
-                margin: 0px 20px 10px 0px auto;
+                margin: 10px auto;
             }
         }
 
